# dii-tpa-hw1

./: .gitignore  2main.cpp  CMakeLists.txt  README.md  main.cpp
include/: car_trailer.h  machine_car_trailer.h
src/: Axis.cpp  CarTrailer.cpp  DeviceFunction.cpp  Floor.cpp  Joint.cpp  Machine.cpp  MachineCarTrailer.cpp  Parameters.cpp  Svg.cpp  Trailer.cpp  Wheel.cpp
tests/: CMakeLists.txt  testCarTrailer.cpp  testMachineCarTrailer.cpp
